Crash in JvmtiTagMap::flush_object_free_events()

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 16
    • Affects Version/s: 16
    • Component/s: hotspot
    • b27

      Test: compiler/c1/6507107/HeapwalkingTest.java

      ----------System.out:(34/2271)----------
      Uptime: 1379 ms
      Timeout: 1200000 ms
      Starting test for 600000 ms ...
      created server socket at 32891
      debuggee out>>>HeapwalkingDebuggee started
      waiting for connection at 32891 ...
      debuggee out>>>For random generator using seed: 2210811162712281345
      debuggee out>>>To re-run test with same seed value please add "-Djdk.test.lib.random.seed=2210811162712281345" to command line.
      debuggee out>>>Thread[Thread-0,5,main] started
      debuggee out>>>Thread[Thread-1,5,main] started
      debuggee out>>>connecting to localhost:32891 ...
      accepted connection
      debuggee out>>>connected
      Start test
      Iteration: 1
      Iteration: 2
      debuggee out>>>#
      debuggee out>>># A fatal error has been detected by the Java Runtime Environment:
      debuggee out>>>#
      debuggee out>>># SIGSEGV (0xb) at pc=0x00007f014f994f97, pid=32584, tid=32598
      debuggee out>>>#
      debuggee out>>># JRE version: Java(TM) SE Runtime Environment (16.0+26) (fastdebug build 16-ea+26-1764)
      debuggee out>>># Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-ea+26-1764, mixed mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
      debuggee out>>># Problematic frame:
      debuggee out>>># V [libjvm.so+0x122ef97] JvmtiTagMap::flush_object_free_events()+0x37
      debuggee out>>>#
      debuggee out>>># Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to core.32584)
      debuggee out>>>#
      debuggee out>>># An error report file with more information is saved as:
      debuggee out>>># hs_err_pid32584.log
      debuggee out>>>#
      debuggee out>>># If you would like to submit a bug report, please visit:
      debuggee out>>># https://bugreport.java.com/bugreport/crash.jsp
      debuggee out>>>#
      ----------System.err:(29/2075)----------
      java.util.concurrent.ExecutionException: com.sun.jdi.VMDisconnectedException
      at java.base/java.util.concurrent.FutureTask.report(FutureTask.java:122)
      at java.base/java.util.concurrent.FutureTask.get(FutureTask.java:205)
      at HeapwalkingTest.start(HeapwalkingTest.java:238)
      at HeapwalkingTest.main(HeapwalkingTest.java:224)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:78)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
      at java.base/java.lang.Thread.run(Thread.java:831)
      Caused by: com.sun.jdi.VMDisconnectedException
      at jdk.jdi/com.sun.tools.jdi.TargetVM.waitForReply(TargetVM.java:310)
      at jdk.jdi/com.sun.tools.jdi.VirtualMachineImpl.waitForTargetReply(VirtualMachineImpl.java:1173)
      at jdk.jdi/com.sun.tools.jdi.PacketStream.waitForReply(PacketStream.java:87)
      at jdk.jdi/com.sun.tools.jdi.JDWP$ObjectReference$ReferringObjects.waitForReply(JDWP.java:5061)
      at jdk.jdi/com.sun.tools.jdi.JDWP$ObjectReference$ReferringObjects.process(JDWP.java:5037)
      at jdk.jdi/com.sun.tools.jdi.ObjectReferenceImpl.referringObjects(ObjectReferenceImpl.java:554)
      at HeapwalkingTest.run(HeapwalkingTest.java:296)
      at java.base/java.util.concurrent.Executors$RunnableAdapter.call(Executors.java:515)
      at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
      at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1130)
      at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:630)
      ... 1 more

            Assignee:
            Coleen Phillimore
            Reporter:
            Jesper Wilhelmsson
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: