8257140: Crash in JvmtiTagMap::flush_object_free_events()